# pygbag

./: .gitignore  LICENSE  MANIFEST.in  README.md  Towsif  default.tmpl  index.html  main  org.python.html  pygame.html  pyproject.toml  python311.html  python311.js  pythonrc.py  pythons.html  server.py  setup.cfg  test.apk  test.html  wasm-build-all.sh  window-template-wip.tmpl
.github/: FUNDING.yml
.github/workflows/: __EMSCRIPTEN__.yml  ci.yml
0.0/: cpythonrc.py  default.tmpl  mobile.tmpl  noctx.tmpl  pkpyrc.py  pythonrc.py  pythons.js  vtx.js
0.0/cpython312/: main.data  main.js
0.0/cpython313/: main.data  main.js
0.0/cpython314/: main.data  main.js
0.0/pkpy13/: main.data  main.js  main.wasm
0.0/pkpy14/: main.data  main.js  main.wasm
0.0/python311/: main.data
0.0/python312/: main.data
0.0/vt/: xterm-addon-image.js
0.3/: vtx.js
0.3.0/: default.tmpl  pythons.js
0.3.0/python311/: main.data
0.3.0/python312/: main.data
0.3.0/xtermjsixel/: xterm-addon-image.js
0.3.1/: pythonrc.py
0.3.1/python311/: main.data
0.3/python311/: main.data
0.3/python312/: main.data
0.4/: default.tmpl  pythonrc.py  pythons.html  pythons.js  vtx.js
0.4/python311/: main.data
0.4/python312/: main.data
0.5/: default.tmpl  pythonrc.py  pythons.html  pythons.js
0.5/python311/: main.data
0.5/python312/: main.data
0.6/: default.tmpl  pythonrc.py  pythons.js  vt.js
0.6/python311/: main.data
0.6/python312/: main.data
0.7/: 3d.tmpl  default.tmpl  noctx.tmpl  pythonrc.py  pythons.js  vtx.js
0.7/python311/: main.data
0.7/python312/: main.data
archives/: pythonrc.py
assets/cpython/: cpython.six
assets/pkpy/: pkpy.six
packages.d/: README.md  pygame.c  pygame.h  pygame.sh
packages.d/_ctypes/: _ctypes.c  _ctypes.h  _ctypes.sh  _ctypes.static.h
packages.d/emsdk/: emsdk.c  emsdk.h  emsdk.sh  emsdk.static.h
packages.d/hpy/: hpy.c  hpy.h  hpy.sh  hpy.static.h
packages.d/pygame/: README.md  pygame.c  pygame.h  pygame.sh
packages.d/pygame.overlay/: freetype.py  wasm_patches.py
packages.d/raylib/: raylib.sh
patchwork/pykpocket/: multiline_parser.py  pp_modules.cpp  pygbag.h  pymain.c  pyque-pocket.cpp  pyque-pocket_main.cpp
pygbag/: __init__.py  __main__.py  aio.py  app.py  dbgserv.py  filtering.py  gateway.py  gathering.py  html_embed.py  mutator.py  optimizing.py  pack.py  testserver.py  web.py
pygbag/support/: cpythonrc.py  pygbag_app.py  pygbag_fsm.py  pygbag_host.py  pygbag_tools.py  pygbag_ui.py  pygbag_ux.py  pythonrc.py  readline.py  typing_extensions.py
python310/: main.data
python311/: main.data
python312/: main.data
scripts/: build-loader.sh  build-pkg.sh  build-pkpy.sh  build-rootfs.sh  vendoring.sh
src/pygbag/: __init__.py  __main__.py  aio.py  app.py  config_to_object.py  config_types.py  example.ini  example_config.py  filtering.py  gateway.py  gathering.py  html_embed.py  mutator.py  optimizing.py  pack.py  testserver.py  web.py
static/: 3d.tmpl  default.tmpl  mobile.tmpl  noctx-nofs.tmpl  noctx.tmpl  pkpyrc.py  pythons.html  pythons.js  vtx.js  window-template-wip.tmpl  window-template.tmpl
support/: __EMSCRIPTEN__-pymain.c  __EMSCRIPTEN__.c  pythonrc.py
test/: main-pygbag.py  main.py
test/module/: __init__.py
xtermjsixel/: xterm-addon-image-worker.js  xterm-addon-image.js
(+72 files in other folders)
