[metadata]
name = pygbag
version = attr: pygbag.__version__
author = Paul Peny
description = pygame wasm, package and run python/pygame directly in modern web browsers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pygame-web/pygbag
project_urls =
    Wiki = https://pygame-web.github.io/
    Bug Tracker = https://github.com/pygame-web/pygbag/issues
    Source Code = https://github.com/pygame-web/pygbag
    Project Page = https://github.com/pygame-web
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# Environment :: WebAssembly
# Environment :: WebAssembly :: Emscripten
# Environment :: WebAssembly :: WASI

[options]
packages = pygbag
zip_safe = True
python_requires = >=3.8

install_requires =
    token-utils

[options.entry_points]
console_scripts =
    pygbag = pygbag.app:main
