[metadata]
name = pygbag
version = attr: pygbag.VERSION
author = Paul Peny
description = package and run python/pygame-ce wasm (and more) directly in modern web browsers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pygame-web.github.io/
project_urls =
    Wiki = https://pygame-web.github.io/
    Bug Tracker = https://github.com/pygame-web/pygbag/issues
    Source Code = https://github.com/pygame-web/pygbag
    Project Page = https://github.com/pygame-web
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# Environment :: WebAssembly
# Environment :: WebAssembly :: Emscripten
# Environment :: WebAssembly :: WASI

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
python_requires = >=3.8

[options.packages.find]
where = src


install_requires =
    token_utils
    pyparsing
    packaging
    installer
    black

[options.extras_require]
SIM =
    aioconsole
    aiohttp
    asyncio_socks_server

[options.entry_points]
console_scripts =
    pygbag = pygbag.app:main
